--- a/index.html
+++ b/index.html
@@ -109,29 +109,40 @@
              </div>
     </section>
 
-    <!-- TESTIMONI SECTION -->
-    <section>
-        <div class="title">Testimoni Pelanggan</div>
-        <div class="testi-items" style="display:grid; grid-template-columns:repeat(auto-fit, minmax(280px, 1fr)); gap:20px;">
-            <div class="testi-box" style="background:white; padding:20px; border-radius:12px; box-shadow:0 3px 10px rgba(0,0,0,0.1); text-align:center;">
-                <img src="https://via.placeholder.com/300x200" alt="Testimoni 1" style="width:100%; height:auto; border-radius:10px;">
-                <h3 style="margin:10px 0 5px;">Budi Santoso</h3>
-                <p style="font-size:14px; color:#444;">"Desainnya bagus banget, revisi cepat dan hasilnya memuaskan!"</p>
-            </div>
+<!-- TESTIMONI SECTION -->
+<section style="padding:40px 20px; font-family:Arial, sans-serif;">
+<div class="title" style="text-align:center; font-size:28px; margin-bottom:25px; font-weight:bold;">Testimoni Pelanggan</div>
 
-            <div class="testi-box" style="background:white; padding:20px; border-radius:12px; box-shadow:0 3px 10px rgba(0,0,0,0.1); text-align:center;">
-                <img src="https://via.placeholder.com/300x200" alt="Testimoni 2" style="width:100%; height:auto; border-radius:10px;">
-                <h3 style="margin:10px 0 5px;">Siti Rahma</h3>
-                <p style="font-size:14px; color:#444;">"Pelayanan ramah, desain profesional, sangat direkomendasikan!"</p>
-            </div>
 
-            <div class="testi-box" style="background:white; padding:20px; border-radius:12px; box-shadow:0 3px 10px rgba(0,0,0,0.1); text-align:center;">
-                <img src="https://via.placeholder.com/300x200" alt="Testimoni 3" style="width:100%; height:auto; border-radius:10px;">
-                <h3 style="margin:10px 0 5px;">Andi Pratama</h3>
-                <p style="font-size:14px; color:#444;">"Harga terjangkau tapi kualitas premium. Mantap!"</p>
-            </div>
-        </div>
-    </section>
+<div class="testi-items" style="display:grid; grid-template-columns:repeat(auto-fit, minmax(280px, 1fr)); gap:20px; max-width:1100px; margin:auto;">
+
+
+<div class="testi-box" style="background:white; padding:20px; border-radius:12px; box-shadow:0 3px 10px rgba(0,0,0,0.1); text-align:center;">
+<img src="https://via.placeholder.com/300x200" alt="Testimoni 1" style="width:100%; height:auto; border-radius:10px;">
+<h3 style="margin:10px 0 5px;">Fatmawati, S.H.</h3>
+<p style="font-size:12px; color:#666; font-style:italic; margin-top:-2px;">Kantor Hukum Fatmawati, S.H. & Rekan</p>
+<p style="font-size:14px; color:#444;">"Desainnya bagus banget, revisi cepat dan hasilnya memuaskan!"</p>
+</div>
+
+
+<div class="testi-box" style="background:white; padding:20px; border-radius:12px; box-shadow:0 3px 10px rgba(0,0,0,0.1); text-align:center;">
+<img src="https://via.placeholder.com/300x200" alt="Testimoni 2" style="width:100%; height:auto; border-radius:10px;">
+<h3 style="margin:10px 0 5px;"> Ibnu Nurdin Sambuana, S.H., M.H.</h3>
+<p style="font-size:12px; color:#666; font-style:italic; margin-top:-2px;">Law Office Ibnu Nurdin Sambuana, S.H., M.H. & Partners </p>
+<p style="font-size:14px; color:#444;">"Pelayanan ramah, desain profesional, sangat direkomendasikan!"</p>
+</div>
+
+
+<div class="testi-box" style="background:white; padding:20px; border-radius:12px; box-shadow:0 3px 10px rgba(0,0,0,0.1); text-align:center;">
+<img src="https://via.placeholder.com/300x200" alt="Testimoni 3" style="width:100%; height:auto; border-radius:10px;">
+<h3 style="margin:10px 0 5px;">Faisal Tanjung, S.H., M.H.</h3>
+<p style="font-size:12px; color:#666; font-style:italic; margin-top:-2px;">Law Office Faisal Tanjung, S.H., M.H. & Partners</p>
+<p style="font-size:14px; color:#444;">"Harga terjangkau tapi kualitas premium. Mantap!"</p>
+</div>
+
+
+</div>
+</section>
 
     <!-- PRICING SECTION -->
     <section>
@@ -179,5 +190,6 @@
 
 </body>
 </html>
+
 
 
