--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <header>
         <h1>PT. Kamallogo Digital Kreatif</h1>
         
-        <p>Jasa Desain Logo Profesional **KHUSUS KANTOR HUKUM & NOTARIS** Berfilosofi Hukum</p>
+        <p>Jasa Desain Logo Profesional KHUSUS KANTOR HUKUM & NOTARIS Berfilosofi Hukum</p>
         <p>Dipercaya lebih dari 2.500 Perusahaan & UMKM</p>
         
         <p style="color: #25d366; font-weight: bold;">"Jangan Buang Waktu! Dapatkan konsultasi desain logo kantor hukum Anda GRATIS dengan spesialis kami. Hubungi kami sekarang!"</p>
@@ -249,3 +249,4 @@
 
 </body>
 </html>
+
