--- a/index.html
+++ b/index.html
@@ -160,26 +160,34 @@
         </div>
     </section>
 
+---
+
 <section style="padding:40px 20px; font-family:Arial, sans-serif;">
 <div class="title" style="text-align:center; font-size:28px; margin-bottom:25px; font-weight:bold;">Testimoni Pelanggan</div>
 <div class="testi-items" style="display:grid; grid-template-columns:repeat(auto-fit, minmax(280px, 1fr)); gap:20px; max-width:1100px; margin:auto;">
 
 <div class="testi-box" style="background:white; padding:20px; border-radius:12px; box-shadow:0 3px 10px rgba(0,0,0,0.1); text-align:center;">
-<img src="https://raw.githubusercontent.com/mkamal03031991/portfolio-logo/main/1.png" alt="Foto Klien Fatmawati S.H." style="width:80px; height:80px; border-radius:50%; object-fit:cover; margin-bottom:10px;">
+<img src="https://raw.githubusercontent.com/mkamal03031991/portfolio-logo/main/1.png" 
+     alt="" 
+     style="width:80px; height:80px; border-radius:50%; object-fit:cover; margin-bottom:10px; display:block; margin-left:auto; margin-right:auto;">
 <h3 style="margin:10px 0 5px;">Fatmawati, S.H.</h3>
 <p style="font-size:12px; color:#666; font-style:italic; margin-top:-2px;">Kantor Hukum Fatmawati, S.H. & Rekan</p>
 <p style="font-size:14px; color:#444;">"Desainnya bagus banget, revisi cepat dan hasilnya memuaskan!"</p>
 </div>
 
 <div class="testi-box" style="background:white; padding:20px; border-radius:12px; box-shadow:0 3px 10px rgba(0,0,0,0.1); text-align:center;">
-<img src="https://raw.githubusercontent.com/mkamal03031991/portfolio-logo/main/2.png" alt="Foto Klien Ibnu Nurdin Sambuana" style="width:80px; height:80px; border-radius:50%; object-fit:cover; margin-bottom:10px;">
+<img src="https://raw.githubusercontent.com/mkamal03031991/portfolio-logo/main/2.png" 
+     alt="" 
+     style="width:80px; height:80px; border-radius:50%; object-fit:cover; margin-bottom:10px; display:block; margin-left:auto; margin-right:auto;">
 <h3 style="margin:10px 0 5px;"> Ibnu Nurdin Sambuana, S.H., M.H.</h3>
 <p style="font-size:12px; color:#666; font-style:italic; margin-top:-2px;">Law Office Ibnu Nurdin Sambuana, S.H., M.H. & Partners </p>
 <p style="font-size:14px; color:#444;">"Pelayanan ramah, desain profesional, sangat direkomendasikan!"</p>
 </div>
 
 <div class="testi-box" style="background:white; padding:20px; border-radius:12px; box-shadow:0 3px 10px rgba(0,0,0,0.1); text-align:center;">
-<img src="https://raw.githubusercontent.com/mkamal03031991/portfolio-logo/main/3.png" alt="Foto Klien Faisal Tanjung" style="width:80px; height:80px; border-radius:50%; object-fit:cover; margin-bottom:10px;">
+<img src="https://raw.githubusercontent.com/mkamal03031991/portfolio-logo/main/3.png" 
+     alt="" 
+     style="width:80px; height:80px; border-radius:50%; object-fit:cover; margin-bottom:10px; display:block; margin-left:auto; margin-right:auto;">
 <h3 style="margin:10px 0 5px;">Faisal Tanjung, S.H., M.H.</h3>
 <p style="font-size:12px; color:#666; font-style:italic; margin-top:-2px;">Law Office Faisal Tanjung, S.H., M.H. & Partners</p>
 <p style="font-size:14px; color:#444;">"Harga terjangkau tapi kualitas premium. Mantap!"</p>
@@ -188,6 +196,8 @@
 
 </div>
 </section>
+
+---
 
     <section>
         <div class="title">Paket Harga</div>
@@ -248,4 +258,3 @@
 
 </body>
 </html>
-
