--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 <a class="btn btn-select" 
                    href="https://wa.me/6281131122225?text=Halo%2C%20saya%20tertarik%20dengan%20Paket%20Basic%20Desain%20Logo%20100rb.%20Mohon%20info%20lebih%20lanjut." 
                    target="_blank" onclick="fbq('track', 'AddToCart', {content_name: 'Basic', value: 100000});">
-                   Pelajari Lebih Lanjut Paket Ini
+                   Ngobrol Sekarang! Paket ini
                 </a>
             </div>
 
@@ -258,6 +258,7 @@
 
 </body>
 </html>
+
 
 
 
